Added invocation and openings page

--- a/pages/categories.html
+++ b/pages/categories.html
@@ -29,13 +29,14 @@
       <a class="category-button" href="gibberish.html">Gibberish</a> <!--&emsp;&emsp; -->
       <a class="category-button" href="group.html">Group Games</a> <!--&emsp;&emsp; -->
       <a class="category-button" href="guessing.html">Guessing</a> <!--&emsp;&emsp; -->
-      <a class="category-button" href="justification.html">Justification</a> <!--&emsp;&emsp; -->
       <a class="category-button" href="interview.html">Interview</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="justification.html">Justification</a> <!--&emsp;&emsp; -->      
       <a class="category-button" href="listening.html">Listening</a> <!--&emsp;&emsp; -->
       <a class="category-button" href="long_forms.html">Long Forms</a> <!--&emsp;&emsp; -->
       <a class="category-button" href="musical.html">Musical</a> <!--&emsp;&emsp; -->
       <a class="category-button" href="narrative.html">Narrative</a> <!--&emsp;&emsp; -->
       <a class="category-button" href="object_work.html">Object Work</a> <!--&emsp;&emsp; -->
+      <a class="category-button" href="openings.html">Openings</a> <!--&emsp;&emsp; -->
       <a class="category-button" href="party.html">Party Games</a> <!--&emsp;&emsp; -->
       <a class="category-button" href="performance.html">Performance</a> <!--&emsp;&emsp; -->
       <a class="category-button" href="pun.html">Pun</a> <!--&emsp;&emsp; -->
