--- a/pages/listening.html
+++ b/pages/listening.html
@@ -46,6 +46,9 @@
 				<a href="#halfLife">Half Life</a>
 			</li>
 			<li>
+				<a href="#invocation">Invocation</a>
+			</li>
+			<li>
 				<a href="#justificationRealtor">Justification Realtor</a>
 			</li>
 			<li>
@@ -441,6 +444,94 @@
 		</ul><hr>
 		<h4>Tags</h4>
 		<a class="tag-link" href="energy.html">Energy</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="narrative.html">Narrative</a> - <a class="tag-link" href="object_work.html">Object Work</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="torture.html">Torture</a> - 
+		<hr>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- INVOCATION ---------- -->
+	<div class="game-box p-2" id="invocation">
+		<h2>Invocation</h2>
+		<hr>
+		<h3>Description</h3>
+		<ul>
+			<li>A one word suggestion is gotten from the audience, usually an object.</li>
+			<li>The cast "summons" the object with a specifically formatted incantation</li>
+			<li>In each phase cast members step out, point towards the imagined object center stage, or use another manner of taking focus before delivering their line of the incantation.</li>
+			<li>About 10-20 ideas(2-3 per cast member) should be shared in each phase except the final phase.</li>
+			<li><em>IT IS</em></li>
+			<ul>
+				<li>In the <em>it is</em> phase the object is treated as a person.</li>
+				<li>Cast members state </li>
+				<li></li>
+			</ul>
+			<li><em>YOU ARE</em></li>
+			<ul>
+				<li>In the <em>you are</em> phase the object is treated as a thing.</li>
+				<li>Cast members talk directly to the object giving it a personal nature or human characteristics.</li>
+				<li>Add on to other cast members ideas from the previous phase to help establish group mind and help memerable ideas rise to the top.</li>
+			</ul>
+			<li><em>THOU ART</em></li>
+			<ul>
+				<li>In the <em>thou art</em> phase the object is treated as a god.</li>
+				<li>To endow the object with godlike qualities the cast members should deliver their lines with the energy and gravitas of a shakespearean actor.</li>
+				<li>The cast members are essentially worshiping the object now.</li>
+				<li>The cast members should return to ideas from the preious phases abstracting and distilling them for the upcoming scenes.</li>
+			</ul>
+			<li><em>I AM</em></li>
+			<ul>
+				<li>In the <em>I am</em> phase cast members become the object.</li>
+				<li>Each cast member should speak only once in this phase.</li>
+				<li>Don't introduce any new ideas in this phase.</li>
+				<li>Ideally the cast is creating a list of their best ideas here at the end</li>
+				<li>Once every cast member has said their <em>I am</em> line, they all say together "I am (the obect)!"</li>
+			</ul>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Suggestion: Can</li>
+			<li>IT IS</li>
+			<ul>
+				<li>Improviser: It is a siren for my cat.</li>
+				<li>Improviser: It is sturdy when full and fragile when empty.</li>
+				<li>Improviser: It is modern and antique.</li>
+				<li>7-17 more...</li>
+			</ul>
+			<li>YOU ARE</li>
+			<ul>
+				<li>Improviser: Your cheapness is under appreciated.</li>
+				<li>Improviser: You are dependable.</li>
+				<li>Improviser: You are full of stinky cat food or delicious soup.</li>
+				<li>7-17 more...</li>
+			</ul>
+			<li>THOU ART</li>
+			<ul>
+				<li>Improviser: Thou art an endless boon whose importance humanity fails to realize!</li>
+				<li>Improviser: Thou art that which contains boundless pleasures for all life forms of the earth!</li>
+				<li>Improviser: Thou art a savior in some capacity no matter your physical condition.</li>
+				<li>7-17 more...</li>
+			</ul>
+			<li>I AM</li>
+			<ul>
+				<li>I am an undecerning helper!</li>
+				<li>I am a thankless provider!</li>
+				<li>I am a broken savior!</li>
+				<li>Go until each cast member has had a turn</li>
+				<li>(All in unison)I AM CAN!</li>
+			</ul>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>This opening is great at allowing a team to generate group mind and build up ideas collaboratively.</li>
+			<li>The theatricality is generally engaging to an audience.</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li>The Upright Citizens Brigade Comedy Improv Manual (second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 241</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="openings.html">Opening</a> - <a class="tag-link" href="performance.html">Performance</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
