--- a/pages/all_games.html
+++ b/pages/all_games.html
@@ -83,6 +83,9 @@
     </div>
     <h3 id="i">I</h3>
     <div>
+      <ul>
+<li><h5><a href="openings.html#invocation">Invocation</a></h5></li>
+      </ul>
     </div>
     <h3 id="j">J</h3>
     <div>
